--- a/notebooks/Model.ipynb
+++ b/notebooks/Model.ipynb
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fri Oct 20 03:18:37 2023       \n",
+      "Mon Oct 23 05:23:25 2023       \n",
       "+-----------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 525.60.13    Driver Version: 525.60.13    CUDA Version: 12.0     |\n",
       "|-------------------------------+----------------------+----------------------+\n",
@@ -26,8 +26,8 @@
       "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
       "|                               |                      |               MIG M. |\n",
       "|===============================+======================+======================|\n",
-      "|   0  Tesla V100-SXM2...  On   | 00000000:15:00.0 Off |                    0 |\n",
-      "| N/A   28C    P0    54W / 300W |    725MiB / 32768MiB |      0%      Default |\n",
+      "|   0  Tesla V100-SXM2...  On   | 00000000:89:00.0 Off |                    0 |\n",
+      "| N/A   27C    P0    39W / 300W |      0MiB / 32768MiB |      0%      Default |\n",
       "|                               |                      |                  N/A |\n",
       "+-------------------------------+----------------------+----------------------+\n",
       "                                                                               \n",
@@ -36,7 +36,7 @@
       "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
       "|        ID   ID                                                   Usage      |\n",
       "|=============================================================================|\n",
-      "|    0   N/A  N/A     34827      C   ...nvs/smf_be/bin/python3.10      722MiB |\n",
+      "|  No running processes found                                                 |\n",
       "+-----------------------------------------------------------------------------+\n"
      ]
     }
@@ -56,6 +56,17 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "5d150586-d672-4999-9a7f-743a7d0d3854",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings(action=\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "e2664559-8789-4785-83d6-26327fe5ed23",
    "metadata": {},
    "outputs": [
@@ -63,10 +74,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/ocean/projects/cis230036p/cmanouan/miniconda3/envs/smf_be/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "INFO:torch.distributed.nn.jit.instantiator:Created a temporary directory at /tmp/tmppwrkadki\n",
-      "INFO:torch.distributed.nn.jit.instantiator:Writing /tmp/tmppwrkadki/_remote_module_non_scriptable.py\n"
+      "INFO:torch.distributed.nn.jit.instantiator:Created a temporary directory at /tmp/tmpvphysszz\n",
+      "INFO:torch.distributed.nn.jit.instantiator:Writing /tmp/tmpvphysszz/_remote_module_non_scriptable.py\n"
      ]
     }
    ],
@@ -84,7 +93,7 @@
     "from pprint import pprint\n",
     "\n",
     "import sys\n",
-    "sys.path.append(\"../\")\n",
+    "sys.path.append(\"../src\")\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -100,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b09a35d4-17a4-437a-ad75-cfdbf9215827",
    "metadata": {},
    "outputs": [],
@@ -112,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "2ef863cc-4128-49a3-a156-fbdc859a9fd2",
    "metadata": {},
    "outputs": [],
@@ -135,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "9e68541d-e1c2-48df-a18d-c37c9da42002",
    "metadata": {},
    "outputs": [
@@ -260,7 +269,7 @@
        "4             11      v2  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "5e7cd7ee-95e6-450a-b7bf-35a626daf357",
    "metadata": {},
    "outputs": [
@@ -283,7 +292,7 @@
        "4876"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,21 +318,21 @@
      "text": [
       "Dataset size:  4876\n",
       "====================================================================================================\n",
-      "ID\t:  2636\n",
+      "ID\t:  9401\n",
       ">> InState\t:  torch.Size([3, 224, 224])\n",
       ">> Desc\t:\n",
-      "{'ids': tensor([ 101, 2404, 1996, 4605, 2006, 2327, 1997, 5127,  102,    0,    0,    0,\n",
-      "           0,    0,    0]),\n",
-      " 'length': 7,\n",
-      " 'mask': tensor([1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0]),\n",
-      " 'raw': 'put the bowl on top of plate',\n",
-      " 'token_type_ids': tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])}\n",
+      "{'ids': tensor([  101,  2404,  1996,  5442,  2000,  1996,  2157,  1997, 12256, 17130,\n",
+      "         2378,   102,     0,     0,     0,     0]),\n",
+      " 'length': 8,\n",
+      " 'mask': tensor([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0]),\n",
+      " 'raw': 'put the knife to the right of mondamin',\n",
+      " 'token_type_ids': tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])}\n",
       ">> Cmd\t:\n",
-      "{'ids': tensor([ 0, 21, 31, 47, 24, 31, 27, 21, 42, 24,  2,  2,  2,  2,  2]),\n",
+      "{'ids': tensor([ 0, 17, 41, 30, 18, 41, 36, 17, 48, 18,  2,  2,  2,  2,  2,  2]),\n",
       " 'length': 11,\n",
-      " 'mask': tensor([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0]),\n",
-      " 'raw': \":BOWL RED POSE-6 :PLATE RED POSE-4 :BOWL  #'*on-transformation*  \"\n",
-      "        ':PLATE'}\n",
+      " 'mask': tensor([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0]),\n",
+      " 'raw': ':KNIFE GREEN POSE-10 :MONDAMIN GREEN POSE-3 :KNIFE  '\n",
+      "        \"#'*rightward-transformation*  :MONDAMIN\"}\n",
       "====================================================================================================\n"
      ]
     }
@@ -357,10 +366,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "820bb68f-3341-4d6e-9cea-80dbdf2de002",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:Training on 3610 samples.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -372,7 +388,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Training on 3610 samples.\n",
       "INFO:root:Validating on 1266 samples.\n"
      ]
     }
@@ -384,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "383eaa10-47d7-4620-928e-8fbcd6889d89",
    "metadata": {},
    "outputs": [
@@ -409,11 +424,11 @@
       "CMD(len) \t\t:  torch.Size([8])\n",
       "\n",
       "IDs & decided tokens\n",
-      "[101, 2404, 1996, 5835, 2000, 1996, 2187, 1997, 14690, 7068, 102, 0, 0, 0, 0, 0]\n",
-      "put the bottle to the left of spatula\n",
+      "[101, 2404, 1996, 5442, 2000, 1996, 2157, 1997, 5442, 102, 0, 0, 0, 0, 0, 0]\n",
+      "put the knife to the right of knife\n",
       "\n",
-      "[0, 8, 46, 50, 10, 31, 40, 8, 43, 10, 2, 2, 2, 2, 2, 2]\n",
-      ":BOTTLE BLUE POSE-7 :SPATULA RED POSE-2 :BOTTLE #'*leftward-transformation* :SPATULA\n",
+      "[0, 17, 41, 28, 17, 31, 40, 17, 48, 17, 2, 2, 2, 2, 2, 2]\n",
+      ":KNIFE GREEN POSE-8 :KNIFE RED POSE-2 :KNIFE #'*rightward-transformation* :KNIFE\n",
       "====================================================================================================\n"
      ]
     }
@@ -460,7 +475,7 @@
    "source": [
     "<!-- ![RT1 model architecture](../../imgs/rt1+.png) -->\n",
     "<center>\n",
-    "    <img src=\"../../imgs/rt1+.png\" alt=\"RT1 model architecture\" width=\"500\" height=\"300\">\n",
+    "    <img src=\"../imgs/rt1+.png\" alt=\"RT1 model architecture\" width=\"500\" height=\"300\">\n",
     "\n",
     "<center>"
    ]
@@ -486,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 11,
    "id": "be96cc06-3693-4e52-8000-23a28efc0e78",
    "metadata": {},
    "outputs": [],
@@ -586,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 12,
    "id": "d55d73ba-efef-4d32-81cb-520974830c74",
    "metadata": {
     "scrolled": true,
@@ -633,7 +648,7 @@
        "=============================================================================================================="
       ]
      },
-     "execution_count": 79,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 13,
    "id": "34e9d6e5-ca31-4b20-8fe1-07412fcb4f33",
    "metadata": {},
    "outputs": [
@@ -656,7 +671,7 @@
        "torch.Size([1, 1536, 7, 7])"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "id": "13693bd3-cfb6-4f7d-be30-5fe251079c3f",
    "metadata": {},
    "outputs": [],
@@ -715,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "id": "f1990061-09b1-42fe-84aa-ed92c4b880ba",
    "metadata": {},
    "outputs": [],
@@ -764,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 16,
    "id": "f6505cc1-9649-490b-922c-d31deda161b8",
    "metadata": {},
    "outputs": [],
@@ -802,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 17,
    "id": "2cbe10a4-0a68-429f-a18c-dfb4012920ff",
    "metadata": {},
    "outputs": [
@@ -833,7 +848,7 @@
        "========================================================================================================="
       ]
      },
-     "execution_count": 72,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,22 +861,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "id": "c58d15f0-b9f5-4a37-8dc4-2eb768d42ab5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'raw': 'put the bowl on top of plate',\n",
-       " 'ids': tensor([ 101, 2404, 1996, 4605, 2006, 2327, 1997, 5127,  102,    0,    0,    0,\n",
-       "            0,    0,    0]),\n",
-       " 'mask': tensor([1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0]),\n",
-       " 'token_type_ids': tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]),\n",
-       " 'length': 7}"
+       "{'raw': 'put the knife to the right of mondamin',\n",
+       " 'ids': tensor([  101,  2404,  1996,  5442,  2000,  1996,  2157,  1997, 12256, 17130,\n",
+       "          2378,   102,     0,     0,     0,     0]),\n",
+       " 'mask': tensor([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0]),\n",
+       " 'token_type_ids': tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]),\n",
+       " 'length': 8}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "id": "1790e904-591d-4ee3-8ae3-f9ee204dbe31",
    "metadata": {
     "scrolled": true,
@@ -889,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "id": "50303d89-95ce-430a-8e74-5df3de3d8349",
    "metadata": {},
    "outputs": [
@@ -899,7 +914,7 @@
        "torch.Size([1, 256])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -921,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "id": "6cfec091-c164-480e-b96a-76af494e4845",
    "metadata": {},
    "outputs": [],
@@ -988,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "id": "09a904d1-b1ef-40b2-9344-f2580105ee41",
    "metadata": {
     "tags": []
@@ -1004,14 +1019,14 @@
        "├─Linear: 1-1                                      526,336\n",
        "├─FeatureExtractor: 1-2                            --\n",
        "│    └─ResNet: 2-1                                 --\n",
-       "│    │    └─Conv2d: 3-1                            9,408\n",
-       "│    │    └─BatchNorm2d: 3-2                       128\n",
+       "│    │    └─Conv2d: 3-1                            (9,408)\n",
+       "│    │    └─BatchNorm2d: 3-2                       (128)\n",
        "│    │    └─ReLU: 3-3                              --\n",
        "│    │    └─MaxPool2d: 3-4                         --\n",
-       "│    │    └─Sequential: 3-5                        147,968\n",
-       "│    │    └─Sequential: 3-6                        525,568\n",
-       "│    │    └─Sequential: 3-7                        2,099,712\n",
-       "│    │    └─Sequential: 3-8                        8,393,728\n",
+       "│    │    └─Sequential: 3-5                        (147,968)\n",
+       "│    │    └─Sequential: 3-6                        (525,568)\n",
+       "│    │    └─Sequential: 3-7                        (2,099,712)\n",
+       "│    │    └─Sequential: 3-8                        (8,393,728)\n",
        "│    │    └─AdaptiveAvgPool2d: 3-9                 --\n",
        "│    │    └─Linear: 3-10                           513,000\n",
        "│    └─Sequential: 2-2                             11,176,512\n",
@@ -1040,12 +1055,12 @@
        "│    │    └─ReLU: 3-30                             --\n",
        "===========================================================================\n",
        "Total params: 28,641,384\n",
-       "Trainable params: 28,641,384\n",
-       "Non-trainable params: 0\n",
+       "Trainable params: 6,288,360\n",
+       "Non-trainable params: 22,353,024\n",
        "==========================================================================="
       ]
      },
-     "execution_count": 41,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1063,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "id": "2b70f6a7-c6b5-4743-8ecf-9cfa122dd7ea",
    "metadata": {},
    "outputs": [
@@ -1080,7 +1095,7 @@
        "torch.Size([1, 512, 7, 7])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1096,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "id": "a6aaceb0-0f2b-487e-9127-c60c7cfe4011",
    "metadata": {},
    "outputs": [
@@ -1128,7 +1143,7 @@
        "================================================================="
       ]
      },
-     "execution_count": 43,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1141,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 25,
    "id": "b1bdb87d-5a21-44eb-9c5d-02960fe3da54",
    "metadata": {},
    "outputs": [
@@ -1151,7 +1166,7 @@
        "torch.Size([1, 1, 7, 7])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1180,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 26,
    "id": "401abc12-3cb4-47ed-ad2b-d5a780331c7c",
    "metadata": {},
    "outputs": [],
@@ -1223,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 27,
    "id": "9e5f39ff-c7aa-460c-a7c2-0e887b52f825",
    "metadata": {},
    "outputs": [
@@ -1235,17 +1250,17 @@
        "=================================================================\n",
        "TokenLearner                             --\n",
        "├─Sequential: 1-1                        --\n",
-       "│    └─Conv2d: 2-1                       4,284,896\n",
+       "│    └─Conv2d: 2-1                       4,202,496\n",
        "│    └─GELU: 2-2                         --\n",
-       "│    └─Conv2d: 2-3                       8,280\n",
+       "│    └─Conv2d: 2-3                       8,200\n",
        "=================================================================\n",
-       "Total params: 4,293,176\n",
-       "Trainable params: 4,293,176\n",
+       "Total params: 4,210,696\n",
+       "Trainable params: 4,210,696\n",
        "Non-trainable params: 0\n",
        "================================================================="
       ]
      },
-     "execution_count": 46,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
