Updated Token Learner Credits

--- a/notebooks/Model.ipynb
+++ b/notebooks/Model.ipynb
@@ -121,13 +121,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 75,
    "id": "2ef863cc-4128-49a3-a156-fbdc859a9fd2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import config\n",
     "from dataloader import BEDataset, BEDataModule\n",
+    "import token_learner\n",
     "from transformer import PositionalEncoder, TransformerDecoder, LayerNormalization, FeedFowardLayer"
    ]
   },
@@ -1443,7 +1444,10 @@
   {
    "cell_type": "markdown",
    "id": "c233bbbf-f4c0-481a-89c2-6132b01eb737",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "#### Token Learner"
    ]
@@ -1458,6 +1462,7 @@
     "class MlpBlock(nn.Module):\n",
     "    \"\"\"\n",
     "        Transformer FeedForward block\n",
+    "        Can use FeedForwardLayer instead\n",
     "    \"\"\"\n",
     "    def __init__(\n",
     "        self, \n",
@@ -1512,13 +1517,6 @@
     "        self.feature_shape = feature_shape\n",
     "        \n",
     "        self.layer_norm = LayerNormalization()\n",
-    "\n",
-    "        # self.token_masking = MlpBlock(\n",
-    "        #     in_dim=self.feature_shape[-1],\n",
-    "        #     mlp_dim=self.bottleneck_dim,\n",
-    "        #     out_dim=self.num_tokens,\n",
-    "        #     dropout_rate=self.dropout_rate\n",
-    "        # )\n",
     "        \n",
     "        self.token_masking = FeedFowardLayer(\n",
     "            in_dim=self.feature_shape[-1],\n",
@@ -1550,6 +1548,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d217cc28-4eb7-4f76-86ee-51dd6ae8f248",
+   "metadata": {},
+   "source": [
+    "#### Test Token Learner"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 40,
    "id": "363d5aca-4d00-4bfa-808a-b9ce8c89ce16",
@@ -1574,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 77,
    "id": "cb960649-ad52-4a6f-be9a-279263b0ae0a",
    "metadata": {},
    "outputs": [
@@ -1616,20 +1622,20 @@
        "================================================================="
       ]
      },
-     "execution_count": 51,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tokL_v11 = TokenLearnerModuleV11(feature_shape=(N, H*W, C))\n",
+    "tokL_v11 = token_learner.TokenLearnerModuleV11(feature_shape=(N, H*W, C))\n",
     "print(tokL_v11)\n",
     "summary(model=tokL_v11)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 80,
    "id": "cb43cec1-32e2-4f1d-bb5a-3ba026a57fa4",
    "metadata": {},
    "outputs": [
@@ -1645,16 +1651,12 @@
     "# Create a dummy input tensor with the shape [batch_size, height, width, channels]\n",
     "dummy_input = torch.randn(N, H * W, C)\n",
     "\n",
-    "\n",
-    "# Initialize the TokenLearnerModuleV11\n",
-    "model = TokenLearnerModuleV11(feature_shape=(N, H*W, C))\n",
-    "\n",
     "# Set the model to evaluation mode\n",
-    "model.eval()\n",
+    "tokL_v11.eval()\n",
     "\n",
     "# Pass the dummy input through the model\n",
     "with torch.no_grad():\n",
-    "    output = model(dummy_input)\n",
+    "    output = tokL_v11(dummy_input)\n",
     "\n",
     "# Print the shape of the output\n",
     "print(\"Output shape:\", output.shape)"
