Added scene history to encoder

--- a/notebooks/DataViz.ipynb
+++ b/notebooks/DataViz.ipynb
@@ -418,7 +418,7 @@
     "    mean:list=config.MEAN, \n",
     "    std:list=config.STD\n",
     "):\n",
-    "    denormalized_image = normalized_image.clone()\n",
+    "    denormalized_image = normalized_image.cpu().detach().clone()\n",
     "    for i in range(3):\n",
     "        denormalized_image[i] = (denormalized_image[i] * std[i]) + mean[i]\n",
     "    \n",
