Updated RT1 Decoder

--- a/notebooks/DataViz.ipynb
+++ b/notebooks/DataViz.ipynb
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fri Oct 20 03:15:53 2023       \n",
+      "Sun Oct 29 10:40:52 2023       \n",
       "+-----------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 525.60.13    Driver Version: 525.60.13    CUDA Version: 12.0     |\n",
       "|-------------------------------+----------------------+----------------------+\n",
@@ -27,7 +27,7 @@
       "|                               |                      |               MIG M. |\n",
       "|===============================+======================+======================|\n",
       "|   0  Tesla V100-SXM2...  On   | 00000000:15:00.0 Off |                    0 |\n",
-      "| N/A   27C    P0    42W / 300W |      0MiB / 32768MiB |      0%      Default |\n",
+      "| N/A   31C    P0    55W / 300W |    727MiB / 32768MiB |      0%      Default |\n",
       "|                               |                      |                  N/A |\n",
       "+-------------------------------+----------------------+----------------------+\n",
       "                                                                               \n",
@@ -36,7 +36,7 @@
       "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
       "|        ID   ID                                                   Usage      |\n",
       "|=============================================================================|\n",
-      "|  No running processes found                                                 |\n",
+      "|    0   N/A  N/A     67855      C   ...nvs/smf_be/bin/python3.10      724MiB |\n",
       "+-----------------------------------------------------------------------------+\n"
      ]
     }
@@ -83,7 +83,7 @@
     "from torch.utils.data import DataLoader\n",
     "\n",
     "import sys\n",
-    "sys.path.append(\"../\")"
+    "sys.path.append(\"../src\")"
    ]
   },
   {
@@ -119,8 +119,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:torch.distributed.nn.jit.instantiator:Created a temporary directory at /tmp/tmp1382fjii\n",
-      "INFO:torch.distributed.nn.jit.instantiator:Writing /tmp/tmp1382fjii/_remote_module_non_scriptable.py\n"
+      "INFO:torch.distributed.nn.jit.instantiator:Created a temporary directory at /tmp/tmppry1qjrh\n",
+      "INFO:torch.distributed.nn.jit.instantiator:Writing /tmp/tmppry1qjrh/_remote_module_non_scriptable.py\n"
      ]
     }
    ],
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "id": "888b41c6-9b15-45da-8f83-f473a97d79db",
    "metadata": {
     "tags": []
@@ -234,7 +234,7 @@
        "4876"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "id": "07ef2ab8-8ecc-4d2c-a6cd-ead4f4caed0f",
    "metadata": {
     "scrolled": true,
@@ -263,21 +263,52 @@
      "text": [
       "Dataset size:  4876\n",
       "====================================================================================================\n",
-      "ID\t:  9401\n",
-      ">> InState\t:  torch.Size([3, 224, 224])\n",
+      "ID\t:  5581\n",
+      ">> InState\t:  torch.Size([3, 288, 288])\n",
       ">> Desc\t:\n",
-      "{'ids': tensor([  101,  2404,  1996,  5442,  2000,  1996,  2157,  1997, 12256, 17130,\n",
-      "         2378,   102,     0,     0,     0]),\n",
-      " 'length': 8,\n",
-      " 'mask': tensor([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0]),\n",
-      " 'raw': 'put the knife to the right of mondamin',\n",
-      " 'token_type_ids': tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])}\n",
+      "{'ids': tensor([  101,  5670,  1996,  2452, 19390,   102,     0,     0,     0,     0,\n",
+      "            0,     0,     0,     0,     0,     0]),\n",
+      " 'mask': tensor([1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]),\n",
+      " 'raw': 'shift the cup forwards ',\n",
+      " 'token_type_ids': tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])}\n",
       ">> Cmd\t:\n",
-      "{'ids': tensor([ 0, 17, 41, 30, 18, 41, 36, 17, 48, 18,  2,  2,  2,  2,  2]),\n",
-      " 'length': 11,\n",
-      " 'mask': tensor([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0]),\n",
-      " 'raw': ':KNIFE GREEN POSE-10 :MONDAMIN GREEN POSE-3 :KNIFE  '\n",
-      "        \"#'*rightward-transformation*  :MONDAMIN\"}\n",
+      "{'decoder_inp_ids': tensor([ 1, 25, 46, 51, 25, 44, 25,  0,  0,  0,  0,  0,  0,  0,  0,  0]),\n",
+      " 'labels': tensor([25, 46, 51, 25, 44, 25,  2,  0,  0,  0,  0,  0,  0,  0,  0,  0]),\n",
+      " 'raw': \":CUP BLUE POSE-1 :CUP  #'*forward-transformation*  :CUP\",\n",
+      " 'source_mask': tensor([[[ True,  True,  True,  True,  True,  True, False, False, False, False,\n",
+      "          False, False, False, False, False, False]]]),\n",
+      " 'target_mask': tensor([[[ True, False, False, False, False, False, False, False, False, False,\n",
+      "          False, False, False, False, False, False],\n",
+      "         [ True,  True, False, False, False, False, False, False, False, False,\n",
+      "          False, False, False, False, False, False],\n",
+      "         [ True,  True,  True, False, False, False, False, False, False, False,\n",
+      "          False, False, False, False, False, False],\n",
+      "         [ True,  True,  True,  True, False, False, False, False, False, False,\n",
+      "          False, False, False, False, False, False],\n",
+      "         [ True,  True,  True,  True,  True, False, False, False, False, False,\n",
+      "          False, False, False, False, False, False],\n",
+      "         [ True,  True,  True,  True,  True,  True, False, False, False, False,\n",
+      "          False, False, False, False, False, False],\n",
+      "         [ True,  True,  True,  True,  True,  True,  True, False, False, False,\n",
+      "          False, False, False, False, False, False],\n",
+      "         [ True,  True,  True,  True,  True,  True,  True, False, False, False,\n",
+      "          False, False, False, False, False, False],\n",
+      "         [ True,  True,  True,  True,  True,  True,  True, False, False, False,\n",
+      "          False, False, False, False, False, False],\n",
+      "         [ True,  True,  True,  True,  True,  True,  True, False, False, False,\n",
+      "          False, False, False, False, False, False],\n",
+      "         [ True,  True,  True,  True,  True,  True,  True, False, False, False,\n",
+      "          False, False, False, False, False, False],\n",
+      "         [ True,  True,  True,  True,  True,  True,  True, False, False, False,\n",
+      "          False, False, False, False, False, False],\n",
+      "         [ True,  True,  True,  True,  True,  True,  True, False, False, False,\n",
+      "          False, False, False, False, False, False],\n",
+      "         [ True,  True,  True,  True,  True,  True,  True, False, False, False,\n",
+      "          False, False, False, False, False, False],\n",
+      "         [ True,  True,  True,  True,  True,  True,  True, False, False, False,\n",
+      "          False, False, False, False, False, False],\n",
+      "         [ True,  True,  True,  True,  True,  True,  True, False, False, False,\n",
+      "          False, False, False, False, False, False]]])}\n",
       "====================================================================================================\n"
      ]
     }
@@ -300,17 +331,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "c258447e-6c36-4fd7-9fdd-1c555c71b5a9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'put the knife to the right of mondamin'"
+       "'move the bowl forwards'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "id": "99e5089b-785e-4fd8-a1cf-3d1756c8bbbe",
    "metadata": {
     "tags": []
@@ -330,17 +361,18 @@
     {
      "data": {
       "text/plain": [
-       "tensor([  101,  2404,  1996,  5442,  2000,  1996,  2157,  1997, 12256, 17130,\n",
-       "         2378,   102,     0,     0,     0])"
+       "(tensor([  101,  2693,  1996,  4605, 19390,   102,     0,     0,     0,     0,\n",
+       "             0,     0,     0,     0,     0,     0]),\n",
+       " torch.Size([16]))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ex[\"action_desc\"]['ids']"
+    "ex[\"action_desc\"]['ids'], ex[\"action_desc\"]['ids'].shape"
    ]
   },
   {
@@ -373,7 +405,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([ 0, 17, 41, 30, 18, 41, 36, 17, 48, 18,  2,  2,  2,  2,  2])"
+       "tensor([ 1, 17, 41, 30, 18, 41, 36, 17, 48, 18,  0,  0,  0,  0,  0,  0])"
       ]
      },
      "execution_count": 12,
@@ -382,7 +414,7 @@
     }
    ],
    "source": [
-    "ex[\"motor_cmd\"]['ids']"
+    "ex[\"motor_cmd\"]['decoder_inp_ids']"
    ]
   },
   {
@@ -403,7 +435,49 @@
     }
    ],
    "source": [
-    "ds._decode_outputs(ids=ex[\"motor_cmd\"]['ids'].tolist())"
+    "ds._decode_outputs(ids=ex[\"motor_cmd\"]['decoder_inp_ids'].tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "b963f4b8-21b8-4f26-831f-a32a06106432",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 16, 16])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ex[\"motor_cmd\"]['target_mask'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "42f5e44d-8c38-471f-afe2-c14c240a2ae1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 1, 16])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ex[\"motor_cmd\"]['source_mask'].shape"
    ]
   },
   {
@@ -423,7 +497,7 @@
     "        denormalized_image[i] = (denormalized_image[i] * std[i]) + mean[i]\n",
     "    \n",
     "    denormalized_image = denormalized_image.permute(1, 2, 0).numpy()\n",
-    "    \n",
+    "        \n",
     "    return denormalized_image\n"
    ]
   },
@@ -476,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 46,
    "id": "8b196a5a-3cbb-4076-996c-dc430f6303f7",
    "metadata": {
     "tags": []
@@ -493,8 +567,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Training on 3610 samples.\n",
-      "INFO:root:Validating on 1266 samples.\n"
+      "INFO:root:Training on 3915 samples.\n",
+      "INFO:root:Validating on 961 samples.\n",
+      "INFO:root:Testing on 250 samples.\n"
      ]
     }
    ],
@@ -513,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 53,
    "id": "03933699-9d63-4a04-acbf-3b42810efa3f",
    "metadata": {
     "tags": []
@@ -532,12 +607,11 @@
      "output_type": "stream",
      "text": [
       "====================================================================================================\n",
-      "# train batches\t: 452\n",
-      "In \t\t\t:  torch.Size([8, 3, 224, 224])\n",
-      "Action desc \t\t:  torch.Size([8, 15])\n",
-      "Action desc (len) \t:  torch.Size([8])\n",
-      "CMD \t\t\t:  torch.Size([8, 15])\n",
-      "CMD(len) \t\t:  torch.Size([8])\n"
+      "# train batches\t: 978\n",
+      "In \t\t\t:  torch.Size([4, 3, 288, 288])\n",
+      "Action desc \t\t:  torch.Size([4, 16])\n",
+      "CMD [decoder inp] \t:  torch.Size([4, 16])\n",
+      "CMD [labels] \t\t:  torch.Size([4, 16])\n"
      ]
     },
     {
@@ -553,12 +627,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# validation batches\t: 159\n",
-      "In \t\t\t:  torch.Size([8, 3, 224, 224])\n",
-      "Action desc \t\t:  torch.Size([8, 15])\n",
-      "Action desc (len) \t:  torch.Size([8])\n",
-      "CMD \t\t\t:  torch.Size([8, 15])\n",
-      "CMD(len) \t\t:  torch.Size([8])\n",
+      "# validation batches\t: 240\n",
+      "In \t\t\t:  torch.Size([4, 3, 288, 288])\n",
+      "Action desc \t\t:  torch.Size([4, 16])\n",
+      "CMD [decoder inp] \t:  torch.Size([4, 16])\n",
+      "CMD [labels] \t\t:  torch.Size([4, 16])\n",
       "====================================================================================================\n"
      ]
     }
@@ -572,9 +645,8 @@
     "    sample_id, in_state, ad, cmd = data[\"sample_id\"], data[\"in_state\"], data[\"action_desc\"], data[\"motor_cmd\"]\n",
     "    print(\"In \\t\\t\\t: \", in_state.shape)\n",
     "    print(\"Action desc \\t\\t: \", ad[\"ids\"].shape)\n",
-    "    print(\"Action desc (len) \\t: \", ad[\"length\"].shape)\n",
-    "    print(\"CMD \\t\\t\\t: \", cmd[\"ids\"].shape)\n",
-    "    print(\"CMD(len) \\t\\t: \", cmd[\"length\"].shape)\n",
+    "    print(\"CMD [decoder inp] \\t: \", cmd[\"decoder_inp_ids\"].shape)\n",
+    "    print(\"CMD [labels] \\t\\t: \", cmd[\"labels\"].shape)\n",
     "    break\n",
     "\n",
     "logging.info(\"\\n\\n>> val data loader\")\n",
@@ -584,9 +656,8 @@
     "    sample_id, in_state, ad, cmd = data[\"sample_id\"], data[\"in_state\"], data[\"action_desc\"], data[\"motor_cmd\"]\n",
     "    print(\"In \\t\\t\\t: \", in_state.shape)\n",
     "    print(\"Action desc \\t\\t: \", ad[\"ids\"].shape)\n",
-    "    print(\"Action desc (len) \\t: \", ad[\"length\"].shape)\n",
-    "    print(\"CMD \\t\\t\\t: \", cmd[\"ids\"].shape)\n",
-    "    print(\"CMD(len) \\t\\t: \", cmd[\"length\"].shape)\n",
+    "    print(\"CMD [decoder inp] \\t: \", cmd[\"decoder_inp_ids\"].shape)\n",
+    "    print(\"CMD [labels] \\t\\t: \", cmd[\"labels\"].shape)\n",
     "    break\n",
     "    \n",
     "print(\"=\"*100)"
