--- a/notebooks/Model.ipynb
+++ b/notebooks/Model.ipynb
@@ -2268,7 +2268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 61,
    "id": "93055361-9653-4f29-be6e-e928b35e326a",
    "metadata": {
     "scrolled": true,
@@ -2464,7 +2464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 56,
    "id": "41f265c7-4f25-4f66-b07d-56a00a86f37c",
    "metadata": {},
    "outputs": [],
@@ -2505,7 +2505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "23b47507-8d42-420f-ae7a-2544ddc83e0a",
    "metadata": {
     "scrolled": true,
@@ -2520,10 +2520,9 @@
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
       "HPU available: False, using: 0 HPUs\n",
-      "INFO:root:Training on 3839 samples.\n",
-      "INFO:root:Validating on 669 samples.\n",
-      "INFO:root:Testing on 250 samples.\n",
-      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n"
+      "INFO:root:Training on 3808 samples.\n",
+      "INFO:root:Validating on 700 samples.\n",
+      "INFO:root:Testing on 250 samples.\n"
      ]
     },
     {
@@ -2531,6 +2530,13 @@
      "output_type": "stream",
      "text": [
       "Total # examples: 4758\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n"
      ]
     },
     {
@@ -2596,33 +2602,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "46fcefbfee614da4b70c093e00e92995",
+       "model_id": "4f7fa7c9fb3f49fe9ebb35f3b24bc1d1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "`Trainer.fit` stopped: `max_epochs=1` reached.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\n",
-       "\u001b[?25h"
       ]
      },
      "metadata": {},
@@ -2675,40 +2660,6 @@
    "source": [
     "# sample = fetch_random_sample_from_batch(batch)\n",
     "# sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "id": "fe2e6049-565c-4572-bc97-daad5f1ff514",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #800000; text-decoration-color: #800000\">╭─────────────────────────────── </span><span style=\"color: #800000; text-decoration-color: #800000; font-weight: bold\">Traceback </span><span style=\"color: #bf7f7f; text-decoration-color: #bf7f7f; font-weight: bold\">(most recent call last)</span><span style=\"color: #800000; text-decoration-color: #800000\"> ────────────────────────────────╮</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span> <span style=\"color: #bfbf7f; text-decoration-color: #bfbf7f\">/tmp/ipykernel_100748/</span><span style=\"color: #808000; text-decoration-color: #808000; font-weight: bold\">2602271712.py</span>:<span style=\"color: #0000ff; text-decoration-color: #0000ff\">1</span> in <span style=\"color: #00ff00; text-decoration-color: #00ff00\">&lt;module&gt;</span>                                                <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>                                                                                                  <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span> <span style=\"color: #800000; text-decoration-color: #800000; font-style: italic\">[Errno 2] No such file or directory: '/tmp/ipykernel_100748/2602271712.py'</span>                       <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">╰──────────────────────────────────────────────────────────────────────────────────────────────────╯</span>\n",
-       "<span style=\"color: #ff0000; text-decoration-color: #ff0000; font-weight: bold\">TypeError: </span>object of type <span style=\"color: #008000; text-decoration-color: #008000\">'method'</span> has no <span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\">len</span><span style=\"font-weight: bold\">()</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[31m╭─\u001b[0m\u001b[31m──────────────────────────────\u001b[0m\u001b[31m \u001b[0m\u001b[1;31mTraceback \u001b[0m\u001b[1;2;31m(most recent call last)\u001b[0m\u001b[31m \u001b[0m\u001b[31m───────────────────────────────\u001b[0m\u001b[31m─╮\u001b[0m\n",
-       "\u001b[31m│\u001b[0m \u001b[2;33m/tmp/ipykernel_100748/\u001b[0m\u001b[1;33m2602271712.py\u001b[0m:\u001b[94m1\u001b[0m in \u001b[92m<module>\u001b[0m                                                \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m                                                                                                  \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m \u001b[3;31m[Errno 2] No such file or directory: '/tmp/ipykernel_100748/2602271712.py'\u001b[0m                       \u001b[31m│\u001b[0m\n",
-       "\u001b[31m╰──────────────────────────────────────────────────────────────────────────────────────────────────╯\u001b[0m\n",
-       "\u001b[1;91mTypeError: \u001b[0mobject of type \u001b[32m'method'\u001b[0m has no \u001b[1;35mlen\u001b[0m\u001b[1m(\u001b[0m\u001b[1m)\u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "len(rt1.train_dataloader)"
    ]
   },
   {
