Updated validation strategy

--- a/notebooks/Modules.ipynb
+++ b/notebooks/Modules.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 79,
    "id": "3f735344-d5e5-4193-a4f8-bde3804622fb",
    "metadata": {},
    "outputs": [
@@ -236,8 +236,8 @@
        "├─RT1Decoder: 1-2                                                 --\n",
        "│    └─Embedding: 2-4                                             26,624\n",
        "│    └─TransformerDecoder: 2-5                                    --\n",
-       "│    │    └─Linear: 3-6                                           262,144\n",
-       "│    │    └─Linear: 3-7                                           8,192\n",
+       "│    │    └─Linear: 3-6                                           262,656\n",
+       "│    │    └─Linear: 3-7                                           8,704\n",
        "│    │    └─ModuleList: 3-8                                       26,219,008\n",
        "│    └─LayerNormalization: 2-6                                    --\n",
        "│    │    └─LayerNorm: 3-9                                        1,024\n",
@@ -247,13 +247,13 @@
        "├─CharErrorRate: 1-4                                              --\n",
        "├─WordErrorRate: 1-5                                              --\n",
        "==========================================================================================\n",
-       "Total params: 68,912,484\n",
-       "Trainable params: 30,045,500\n",
+       "Total params: 68,913,508\n",
+       "Trainable params: 30,046,524\n",
        "Non-trainable params: 38,866,984\n",
        "=========================================================================================="
       ]
      },
-     "execution_count": 20,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "7e608e2a-2966-4550-9526-c0983f91885c",
    "metadata": {},
    "outputs": [],
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "9d962c34-7c4c-40e6-b5e6-60809f411de4",
    "metadata": {},
    "outputs": [],
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "c0501fba-4572-42d9-85bf-41adb6340b61",
    "metadata": {},
    "outputs": [],
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 80,
    "id": "0d9d22df-8a7b-4cba-8811-dd0bd796815a",
    "metadata": {},
    "outputs": [
@@ -364,13 +364,13 @@
        "    eps: 1e-08\n",
        "    foreach: None\n",
        "    fused: None\n",
-       "    lr: 3e-06\n",
+       "    lr: 2e-06\n",
        "    maximize: False\n",
-       "    weight_decay: 1e-06\n",
+       "    weight_decay: 5e-06\n",
        ")"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 81,
    "id": "989aec1b-f692-4e0b-99ab-9fc7c97a38d8",
    "metadata": {},
    "outputs": [],
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 82,
    "id": "25ce1de8-a9ca-494a-ad5a-5e10b26eda20",
    "metadata": {},
    "outputs": [],
@@ -471,37 +471,39 @@
     "        imgs=imgs    \n",
     "    )\n",
     "    \n",
-    "    decoder_inp = torch.empty(1, max_len, dtype=torch.long, device=input_ids.device).fill_(sos_token)\n",
-    "    decoder_mask = generate_causal_attention_mask(\n",
-    "            dim=max_len\n",
-    "        ).type_as(attn_mask)\n",
+    "    decoder_inp = torch.empty(1, 1, dtype=torch.long, device=input_ids.device).fill_(sos_token)\n",
     "\n",
     "    # decoding procedure\n",
-    "    for t in range(1, max_len):\n",
+    "    for t in range(max_len):\n",
+    "        \n",
+    "        decoder_mask = generate_causal_attention_mask(\n",
+    "            dim=decoder_inp.shape[1]\n",
+    "        ).type_as(attn_mask)\n",
+    "        \n",
     "        # generate predictions\n",
     "        with torch.no_grad():\n",
     "            logits, _, _, _ = model._decode(\n",
     "            decoder_inp=decoder_inp, \n",
     "            encoder_outs=(text_enc_last_h, learned_tokens), \n",
     "            src_mask=src_mask, \n",
-    "            target_mask=decoder_mask[0, t],\n",
-    "            debug=debug\n",
+    "            target_mask=decoder_mask,\n",
+    "            debug=debug,\n",
+    "            return_actions=False\n",
     "        )\n",
     "\n",
-    "        # apply softmax\n",
-    "        # probs = nn.functional.softmax(logits, dim=-1)\n",
     "        # perform greedy decoding\n",
-    "        next_tok = torch.argmax(logits[:, -1, :], dim=-1)\n",
-    "        # update decoder input\n",
-    "        # decoder_inp = torch.cat((decoder_inp, next_tok.unsqueeze(1)), dim=1)\n",
-    "        decoder_inp[0, t] = next_tok.item()\n",
+    "        probs = model.decoder.action_generator(logits[:, -1])\n",
     "            \n",
-    "    return decoder_inp.cpu().detach(), logits"
+    "        _, next_tok = torch.max(probs, dim=-1)\n",
+    "        # update decoder input\n",
+    "        decoder_inp = torch.cat((decoder_inp, next_tok.unsqueeze(1)), dim=1)\n",
+    "            \n",
+    "    return decoder_inp[:, 1:].cpu().detach(), logits"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 83,
    "id": "fff9aedb-5a52-48f6-b8df-d2cff2439aa4",
    "metadata": {},
    "outputs": [],
@@ -548,13 +550,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 84,
    "id": "8e2be6db-be4c-415f-a56b-9158229cbe91",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'val_loss': 6.711905002593994,\n",
+       " 'CER': 0.9677419066429138,\n",
+       " 'WER': 1.7777777910232544,\n",
+       " 'label': \":BREAKFAST-CEREAL RED POSE-6 :PLATE RED POSE-4 :BREAKFAST-CEREAL #'*on-transformation* :PLATE\",\n",
+       " 'pred_ids': tensor([[28, 41, 20, 14, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17, 17]]),\n",
+       " 'pred_tokens': 'POSE-8 GREEN :CAP :GLOVE :KNIFE :KNIFE :KNIFE :KNIFE :KNIFE :KNIFE :KNIFE :KNIFE :KNIFE :KNIFE :KNIFE :KNIFE'}"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# out = validation_step(model=rt1, batch=batch, loss_fn=loss_fn)\n",
-    "# out"
+    "out = validation_step(model=rt1, batch=batch, loss_fn=loss_fn)\n",
+    "out"
    ]
   },
   {
@@ -567,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 85,
    "id": "643f24ee-c2cc-4cd3-bb87-e898490c0a61",
    "metadata": {},
    "outputs": [],
@@ -575,9 +593,8 @@
     "def run_experiment(model, dm, opt, loss_fn):\n",
     "    \n",
     "    # init experiment\n",
-    "    with open(config.LOGGING_FILE, \"w\") as f:   \n",
+    "    with open(config.LOGGING_FILE, \"a\") as f:   \n",
     "        f.write(\"*** New experiment ***\\n\")\n",
-    "\n",
     "    \n",
     "    loss_epoch = np.inf\n",
     "    val_loss = np.inf\n",
@@ -588,14 +605,14 @@
     "    \n",
     "    for e in range(config.EPOCHS):        \n",
     "        running_loss = 0.\n",
-    "        num_steps = len(dm.train_dataloader())\n",
+    "        num_steps = config.BATCH_SIZE + len(dm.train_dataloader())\n",
     "        \n",
     "        pbar = tqdm(\n",
     "            range(num_steps),\n",
     "            position=0,\n",
     "            leave=True,\n",
     "            dynamic_ncols=True,\n",
-    "        \n",
+    "            total = num_steps\n",
     "        )\n",
     "        \n",
     "        # training\n",
@@ -668,13 +685,23 @@
     "        val_loss = out[\"val_loss\"]\n",
     "        # update best score\n",
     "        if val_loss < best_val_loss:\n",
+    "            # save checkpoint\n",
+    "            path = os.path.join(config.MODEL_PATH, \"be_model.bin\")\n",
+    "            torch.save({\n",
+    "                'model_state_dict'      :model.state_dict(),\n",
+    "                'optimizer_state_dict'  :opt.state_dict(),\n",
+    "                'val_loss'              : val_loss, \n",
+    "                'epoch'                 : e\n",
+    "                }, path)\n",
+    "            \n",
+    "            # update best score\n",
     "            best_val_loss = val_loss        \n",
     "        \n",
     "        pbar.set_postfix(\n",
     "            TrainLossStep=\"{:.04f}\".format(running_loss/(step+1)),\n",
     "            TrainLossEpoch=\"{:.04f}\".format(loss_epoch),\n",
-    "            CER=\"{:.04f}\".format(cer_),\n",
-    "            WER=\"{:.04f}\".format(wer_),\n",
+    "            # CER=\"{:.04f}\".format(cer_),\n",
+    "            # WER=\"{:.04f}\".format(wer_),\n",
     "            ValLoss=\"{:.04f}\".format(val_loss),\n",
     "            ValCER=\"{:.04f}\".format(out[\"CER\"]),\n",
     "            ValWER=\"{:.04f}\".format(out[\"WER\"]),\n",
@@ -709,119 +736,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e4466eb259443aeb4dcf25772157f48",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|                                                                                                         …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "db096a6481c4458f9cc4ffa750ccc54e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|                                                                                                         …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d2934be1b2c240edad8b55d4aef555b2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|                                                                                                         …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3ca61e37761d40bd9fa44fe8110aea4a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|                                                                                                         …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "10703ca8199e4240bce633363425659a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|                                                                                                         …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "839a9a73cccb466d86334096aacabce7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|                                                                                                         …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d5ff310b58dd4640bce64d730f521774",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|                                                                                                         …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0dfe995e4bba454e8c93d07bc3456678",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|                                                                                                         …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "76dec4ae93c442a7b96c3aca9c5e02d7",
+       "model_id": "b632f953d34749998611c5725b8b7203",
        "version_major": 2,
        "version_minor": 0
       },
