Updated train v2 notebook

--- a/notebooks/Train.ipynb
+++ b/notebooks/Train.ipynb
@@ -2334,7 +2334,10 @@
   {
    "cell_type": "markdown",
    "id": "25322e0f-6505-43a4-bfbd-c56e235b0f98",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### Model I/O🧑🏾‍🍳"
    ]
@@ -2802,7 +2805,6 @@
    "cell_type": "markdown",
    "id": "00fa4b5a-a85f-4b8c-8023-898a9d93f876",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
