updated training scripts

--- a/notebooks/Train.ipynb
+++ b/notebooks/Train.ipynb
@@ -2021,6 +2021,7 @@
    "cell_type": "markdown",
    "id": "bb14293b-b031-477b-a643-3811927b1bb1",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
