updated transformer decoder ++

--- a/notebooks/Train.ipynb
+++ b/notebooks/Train.ipynb
@@ -347,7 +347,6 @@
    "cell_type": "markdown",
    "id": "59b32ff7-02ee-4fa3-b3b9-7885f558072b",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -363,7 +362,6 @@
    "cell_type": "markdown",
    "id": "130cea30-c012-4a53-a94b-7651270e4c38",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -735,7 +733,6 @@
    "cell_type": "markdown",
    "id": "21ce81c2-ecfd-49cf-8613-b806d585dfb0",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -859,7 +856,6 @@
    "cell_type": "markdown",
    "id": "029e620f-5541-4a49-acdf-43ec4b3cce02",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -879,7 +875,15 @@
     "    num_embeddings=config.TARGET_VOCAB_SIZE, \n",
     "    embedding_dim=config.EMBEDDING_DIM, \n",
     "    padding_idx=config.TGT_PAD_TOK_ID\n",
-    ").cuda()"
+    ").cuda()\n",
+    "\n",
+    "inp = input_ids\n",
+    "outp = decoder_inp\n",
+    "\n",
+    "inp_emb = inp_embedding(inp)\n",
+    "outp_emb = target_embedding(outp)\n",
+    "\n",
+    "inp_emb.shape, outp_emb.shape"
    ]
   },
   {
@@ -899,15 +903,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "inp = input_ids\n",
-    "outp = decoder_inp\n",
-    "\n",
-    "inp_emb = inp_embedding(inp)\n",
-    "outp_emb = target_embedding(outp)\n",
-    "\n",
-    "inp_emb.shape, outp_emb.shape"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1132,7 +1128,6 @@
    "cell_type": "markdown",
    "id": "80bfd9d2-386f-463d-884a-2a35f748142b",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1303,7 +1298,6 @@
    "cell_type": "markdown",
    "id": "210efe9b-24f9-4e1a-a115-29347d9849eb",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1552,7 +1546,6 @@
    "cell_type": "markdown",
    "id": "2ecee6b6-431b-4a64-a958-296b07ff4022",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1792,7 +1785,6 @@
    "cell_type": "markdown",
    "id": "d2ff709e-3659-4f81-a210-cf5e5d4a228e",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
