--- a/notebooks/TrainV2.ipynb
+++ b/notebooks/TrainV2.ipynb
@@ -49,7 +49,6 @@
    "cell_type": "markdown",
    "id": "64f74170-ded5-4ca1-81b1-7b3857810090",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -137,7 +136,7 @@
    "source": [
     "import config\n",
     "from dataloader import BEDataset, BEDataModule\n",
-    "from transformer import generate_causal_attention_mask\n",
+    "from transformer import make_attn_mask\n",
     "\n",
     "from rt1 import RT1CRAM\n",
     "from utils.model_utils import plot_attention, fetch_sample_from_batch\n",
@@ -1260,8 +1259,6 @@
     "    token_type_ids=batch[\"action_desc\"][\"token_type_ids\"].to(config.DEVICE)\n",
     "    imgs=batch[\"in_state\"].to(config.DEVICE)\n",
     "    decoder_inp=batch[\"motor_cmd\"][\"decoder_inp_ids\"].to(config.DEVICE)\n",
-    "    src_mask=(batch[\"source_mask\"].to(config.DEVICE), batch[\"source_mask_tokens\"].to(config.DEVICE))\n",
-    "    target_mask=batch[\"target_mask\"].to(config.DEVICE)\n",
     "    \n",
     "    # forward\n",
     "    logits, self_attn_ws, cross_attn_ws_seq, cross_attn_ws_tokens = model(\n",
@@ -1269,9 +1266,7 @@
     "        attn_mask=attn_mask, \n",
     "        token_type_ids=token_type_ids, \n",
     "        imgs=imgs,\n",
-    "        decoder_inp=decoder_inp, \n",
-    "        src_mask=src_mask, \n",
-    "        target_mask=target_mask \n",
+    "        decoder_inp=decoder_inp\n",
     "    )\n",
     "\n",
     "    # loss computation\n",
